@@ -134,6 +134,13 @@ name|constantScoreRewrite
 init|=
 literal|false
 decl_stmt|;
+DECL|field|numberOfTerms
+specifier|transient
+name|int
+name|numberOfTerms
+init|=
+literal|0
+decl_stmt|;
 comment|/** Constructs a query for terms matching<code>term</code>. */
 DECL|method|MultiTermQuery
 specifier|public
@@ -180,6 +187,29 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
+comment|/**    * Expert: Return the number of unique terms visited during execution of the query.    * If there are many of them, you may consider using another query type    * or optimize your total term count in index.    *<p>This method is not thread safe, be sure to only call it when no query is running!    * If you re-use the same query instance for another    * search, be sure to first reset the term counter    * with {@link #clearTotalNumberOfTerms}.    *<p>On optimized indexes / no MultiReaders, you get the correct number of    * unique terms for the whole index. Use this number to compare different queries.    * For non-optimized indexes this number can also be achived in    * non-constant-score mode. In constant-score mode you get the total number of    * terms seeked for all segments / sub-readers.    * @see #clearTotalNumberOfTerms    */
+DECL|method|getTotalNumberOfTerms
+specifier|public
+name|int
+name|getTotalNumberOfTerms
+parameter_list|()
+block|{
+return|return
+name|numberOfTerms
+return|;
+block|}
+comment|/**    * Expert: Resets the counting of unique terms.    * Do this before executing the query/filter.    * @see #getTotalNumberOfTerms    */
+DECL|method|clearTotalNumberOfTerms
+specifier|public
+name|void
+name|clearTotalNumberOfTerms
+parameter_list|()
+block|{
+name|numberOfTerms
+operator|=
+literal|0
+expr_stmt|;
+block|}
 DECL|method|getFilter
 specifier|protected
 name|Filter
@@ -247,6 +277,9 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|numberOfTerms
+operator|++
+expr_stmt|;
 name|TermQuery
 name|tq
 init|=
@@ -598,20 +631,13 @@ name|generate
 parameter_list|(
 name|IndexReader
 name|reader
+parameter_list|,
+name|TermEnum
+name|enumerator
 parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|TermEnum
-name|enumerator
-init|=
-name|mtq
-operator|.
-name|getEnum
-argument_list|(
-name|reader
-argument_list|)
-decl_stmt|;
 name|TermDocs
 name|termDocs
 init|=
@@ -639,6 +665,11 @@ operator|==
 literal|null
 condition|)
 break|break;
+name|mtq
+operator|.
+name|numberOfTerms
+operator|++
+expr_stmt|;
 name|termDocs
 operator|.
 name|seek
@@ -676,11 +707,6 @@ block|}
 finally|finally
 block|{
 name|termDocs
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|enumerator
 operator|.
 name|close
 argument_list|()
@@ -725,6 +751,19 @@ throws|throws
 name|IOException
 block|{
 specifier|final
+name|TermEnum
+name|enumerator
+init|=
+name|mtq
+operator|.
+name|getEnum
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+specifier|final
 name|BitSet
 name|bitSet
 init|=
@@ -762,11 +801,22 @@ operator|.
 name|generate
 argument_list|(
 name|reader
+argument_list|,
+name|enumerator
 argument_list|)
 expr_stmt|;
 return|return
 name|bitSet
 return|;
+block|}
+finally|finally
+block|{
+name|enumerator
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|getDocIdSet
 specifier|public
@@ -779,6 +829,35 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+specifier|final
+name|TermEnum
+name|enumerator
+init|=
+name|mtq
+operator|.
+name|getEnum
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+comment|// if current term in enum is null, the enum is empty -> shortcut
+if|if
+condition|(
+name|enumerator
+operator|.
+name|term
+argument_list|()
+operator|==
+literal|null
+condition|)
+return|return
+name|DocIdSet
+operator|.
+name|EMPTY_DOCIDSET
+return|;
+comment|// else fill into a OpenBitSet
 specifier|final
 name|OpenBitSet
 name|bitSet
@@ -817,11 +896,22 @@ operator|.
 name|generate
 argument_list|(
 name|reader
+argument_list|,
+name|enumerator
 argument_list|)
 expr_stmt|;
 return|return
 name|bitSet
 return|;
+block|}
+finally|finally
+block|{
+name|enumerator
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|equals
 specifier|public
